# images/admin_api/src/swagger.json
@@ -645,7 +645,35 @@
 					}
 				}
 			}
-		},		
+		},
+		"/organization_users/user_managed/": {		
+			"get": {
+				"tags": ["Organization"],
+				"summary": "Get all organizations users for orgs managed by the logged user",
+				"responses": {
+					"200": {
+						"description": "OK",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/definitions/UsersOutput"
+								}
+							}
+						}
+					},
+					"401": {
+						"description": "No auth token or invalid token",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/definitions/Credentials_rejected"
+								}
+							}
+						}
+					}
+				}
+			}
+		},				
 		"/organization": {
 			"post": {
 				"tags": ["Organization"],
@@ -1275,7 +1303,35 @@
 					}
 				}
 			}
-		},		
+		},
+		"/group_members/user_managed": {		
+			"get": {
+				"tags": ["Group"],
+				"summary": "Get all groups members for groups managed by the logged user",
+				"responses": {
+					"200": {
+						"description": "OK",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/definitions/GroupMembers"
+								}
+							}
+						}
+					},
+					"401": {
+						"description": "No auth token or invalid token",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/definitions/Credentials_rejected"
+								}
+							}
+						}
+					}
+				}
+			}
+		},				
 		"/group/{orgId}": {
 			"parameters": [
 				{
